package seedu.duke.quiz;

public class Quiz {
    private final String question;
    private final String option1;
    private final String option2;
    private final String option3;
    private final String option4;
    private final String answer;

    public Quiz(String question, String option1, String option2, String option3, String option4, String answer) {
        this.question = question;
        this.option1 = option1;
        this.option2 = option2;
        this.option3 = option3;
        this.option4 = option4;
        this.answer = answer;
    }

    public String getQuestion() {
        return question;
    }

    public String getOption1() {
        return option1;
    }

    public String getOption2() {
        return option2;
    }

    public String getOption3() {
        return option3;
    }

    public String getOption4() {
        return option4;
    }

    public String getAnswer() {
        return answer;
    }

    public String convertToData() {
        return question + "|" + option1 + "|" + option2 + "|" + option3 + "|" + option4 + "|" + answer;
    }

    @Override
    public String toString() {
        return question + "\n"
                + "(1) " + option1 + "\n"
                + "(2) " + option2 + "\n"
                + "(3) " + option3 + "\n"
                + "(4) " + option4 + "\n";
    }
}
